# headshot-generator

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  README.md  SECURITY.md  app-basic.py  app.py  cli.py  config.py  example.py  headshot_generator.py  packages.txt  pyproject.toml  requirements-deploy.txt  requirements-minimal.txt  requirements-streamlit.txt  requirements.txt  setup.py  start.sh  utils.py
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
